Run a11y report per page when turned on

--- a/UI.NUnitVersion/appsettings.json
+++ b/UI.NUnitVersion/appsettings.json
@@ -54,6 +54,8 @@
       "ReportLocation": "/TestResults/Reports",
       "ImageLocation": "/TestResults/Images",
       "RunOnSauceLabs": false,
+      "EnableAccessibilityCheck": true,
+      "AccessibilityReportFilePath": "vh-axe-result.json",
       "SauceLabsConfiguration": {
         "SauceUsername": "",
         "SauceAccessKey": "",
