--- a/UI.NUnitVersion/appsettings.json
+++ b/UI.NUnitVersion/appsettings.json
@@ -54,8 +54,9 @@
       "ReportLocation": "/TestResults/Reports",
       "ImageLocation": "/TestResults/Images",
       "RunOnSauceLabs": false,
-      "EnableAccessibilityCheck": false,
+      "EnableAccessibilityCheck": true,
       "AccessibilityReportFilePath": "vh-axe-result.json",
+      "AccessibilityHtmlReportFilePath": "vh-axe-result.html",
       "SauceLabsConfiguration": {
         "SauceUsername": "",
         "SauceAccessKey": "",
