--- a/UI.NUnitVersion/appsettings.json
+++ b/UI.NUnitVersion/appsettings.json
@@ -54,7 +54,7 @@
       "ReportLocation": "/TestResults/Reports",
       "ImageLocation": "/TestResults/Images",
       "RunOnSauceLabs": false,
-      "EnableAccessibilityCheck": true,
+      "EnableAccessibilityCheck": false,
       "AccessibilityReportFilePath": "vh-axe-result.json",
       "AccessibilityHtmlReportFilePath": "vh-axe-result.html",
       "SauceLabsConfiguration": {
