update default val for run a11y tests to true

--- a/azure-pipelines.sds.daily.yml
+++ b/azure-pipelines.sds.daily.yml
@@ -19,7 +19,7 @@ parameters:
   - name: runA11yTests
     displayName: Run Accessibiliy Tests
     type: boolean
-    default: false
+    default: true
 
   - name: environment
     type: string
