VIH-9895 A11y testing with pom (#182)
* Run a11y report per page when turned on

* Use the test name to create unique a11y reports

* Filter allocated hearings to avoid attempting to allocate hearing to the same automation user

--- a/UI.NUnitVersion/appsettings.json
+++ b/UI.NUnitVersion/appsettings.json
@@ -54,6 +54,9 @@
       "ReportLocation": "/TestResults/Reports",
       "ImageLocation": "/TestResults/Images",
       "RunOnSauceLabs": false,
+      "EnableAccessibilityCheck": false,
+      "AccessibilityReportFilePath": "vh-axe-result.json",
+      "AccessibilityHtmlReportFilePath": "vh-axe-result.html",
       "SauceLabsConfiguration": {
         "SauceUsername": "",
         "SauceAccessKey": "",
