--- a/azure-pipelines.sds.release.yml
+++ b/azure-pipelines.sds.release.yml
@@ -82,7 +82,7 @@ stages:
                 inputs:
                   command: test
                   projects: "$(projectPath)/*.csproj"
-                  arguments: "--configuration Release --filter TestCategory=Accessibility"
+                  arguments: "--configuration Release --filter TestCategory=DeviceTest"
                   publishTestResults: true
 
               - task: PublishBuildArtifacts@1
