Add Booking API Client update pipeline to read from keyvault

--- a/UI.NUnitVersion/appsettings.json
+++ b/UI.NUnitVersion/appsettings.json
@@ -70,5 +70,15 @@
         "AppiumVersion": "1.17.1"
       }
     }
+  },
+  "ApiClientConfiguration": {
+    "Authority": "https://login.microsoftonline.com/",
+    "ClientId": "ClientId",
+    "ClientSecret": "ClientSecret",
+    "TenantId": "TenantId",
+    "BookingsApi": {
+      "Url": "https://localhost:5300/",      
+      "ResourceId": "ResourceId"
+    }
   }
 }
