--- a/UI.Common/UI.Common.csproj
+++ b/UI.Common/UI.Common.csproj
@@ -11,6 +11,7 @@
         <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="7.0.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="7.0.0" />
+        <PackageReference Include="Microsoft.Identity.Client" Version="4.54.1" />
     </ItemGroup>
 
 </Project>
