--- a/UI.NUnitVersion/UI.NUnitVersion.csproj
+++ b/UI.NUnitVersion/UI.NUnitVersion.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="BookingsApi.Client" Version="1.45.18" />
         <PackageReference Include="ExtentReports" Version="4.1.0" />
         <PackageReference Include="FluentAssertions" Version="6.11.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.2" />
@@ -42,6 +43,10 @@
         <EmbeddedResource Include="TestData\GoodNonAvailabilityHours.csv">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </EmbeddedResource>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Configuration\" />
     </ItemGroup>
 
 </Project>
