--- a/UI.PageModels/UI.PageModels.csproj
+++ b/UI.PageModels/UI.PageModels.csproj
@@ -11,6 +11,7 @@
         <PackageReference Include="Selenium.Support" Version="4.10.0" />
         <PackageReference Include="Selenium.WebDriver" Version="4.10.0" />
         <PackageReference Include="SeleniumExtras.WaitHelpers" Version="1.0.2" />
+        <PackageReference Include="TextCopy" Version="6.2.1" />
     </ItemGroup>
 
     <ItemGroup>
