--- a/azure-pipelines.sds.daily.yml
+++ b/azure-pipelines.sds.daily.yml
@@ -89,7 +89,7 @@ stages:
                 inputs:
                   command: test
                   projects: "$(projectPath)/*.csproj"
-                  arguments: "--configuration Release"
+                  arguments: "--configuration Release --filter TestCategory=Daily"
                   publishTestResults: true
                   testRunTitle: "UI Tests ${{ parameters.environment }}"
 
