remove shared var

--- a/azure-pipelines.sds.daily.yml
+++ b/azure-pipelines.sds.daily.yml
@@ -43,11 +43,10 @@ stages:
           - job: UI_Tests
             displayName: UI Tests ${{ parameters.environment }}
             variables:
-              - template: pipelines/variables/shared.yaml
-                parameters:
-                  environment: ${{ parameters.environment }}
               - name: env
                 value: ${{ lower(replace(parameters.environment, 'stg', 'staging')) }}
+              - name: subscriptionName
+                value: "DTS-SHAREDSERVICES-${{ upper(parameters.env) }}-Video Hearings"
               - name: projectPath
                 value: "UI.NUnitVersion"
               - group: vh-automation-test-${{ parameters.environment }}
