--- a/pipelines/templates/run-ui-test.yaml
+++ b/pipelines/templates/run-ui-test.yaml
@@ -20,19 +20,23 @@ parameters:
     displayName: Test Run Title
     type: string
     default: "Test Results"
+  - name: subscriptionName
+    displayName: Key Vault Subscription Name
+    type: string
+    default: "**/TestResults/*.trx"
 
 steps:
   - task: AzureKeyVault@1
     displayName: "Azure Key Vault: vh-infra-core-${{ lower(parameters.environment) }}"
     inputs:
-      azureSubscription: "${{ variables.subscriptionName }}"
+      azureSubscription: "${{ parameters.subscriptionName }}"
       KeyVaultName: "vh-infra-core-${{ lower(parameters.environment) }}"
       SecretsFilter: "azuread--tenantid"
 
   - task: AzureKeyVault@1
     displayName: "Azure Key Vault: vh-bookings-api-dev"
     inputs:
-      azureSubscription: "${{ variables.subscriptionName }}"
+      azureSubscription: "${{ parameters.subscriptionName }}"
       KeyVaultName: "vh-bookings-api-${{ lower(parameters.environment) }}"
       SecretsFilter: "azuread--clientid, azuread--clientsecret, azuread--identifieruri"
 
