--- a/pipelines/templates/run-ui-test.yaml
+++ b/pipelines/templates/run-ui-test.yaml
@@ -67,6 +67,11 @@ steps:
       Get-Content "${{ parameters.projectpath }}/appsettings.json"
     displayName: Print App Settings
 
+  - bash: |
+      sed -i "s|</configuration>|<packageSourceCredentials><vh-packages><add key=\"Username\" value=\"PAT\" /><add key=\"ClearTextPassword\" value=\"$(System.AccessToken)\" /></vh-packages></packageSourceCredentials></configuration>|" nuget.config
+    displayName: Add NuGet Feed Authentication
+    workingDirectory: $(Build.SourcesDirectory)
+
   - task: DotNetCoreCLI@2
     displayName: Run UI Tests
     inputs:
