--- a/UI.NUnitVersion/appsettings.json
+++ b/UI.NUnitVersion/appsettings.json
@@ -41,7 +41,7 @@
       "Environment": "Development",
       "BrowserType": "Chrome",
       "ConnectionString": "",
-      "AdminUrl": "https://localhost:5400",
+      "AdminUrl": "vh-admin-web.dev.platform.hmcts.net",
       "VideoUrl": "https://vh-video-web.dev.platform.hmcts.net",
       "UserPassword": "",
       "UKConferencePhoneNumber": "",
