--- a/variables/test.yaml
+++ b/variables/test.yaml
@@ -5,3 +5,5 @@ variables:
     value: "https://vh-admin-web.test.platform.hmcts.net"
   - name: videoWebUrl
     value: "https://vh-video-web.test.platform.hmcts.net"
+  - name: bookingsApiUrl
+    value: "https://vh-bookings-api.test.platform.hmcts.net/"
