--- a/variables/dev.yaml
+++ b/variables/dev.yaml
@@ -5,3 +5,5 @@ variables:
     value: "https://vh-admin-web.dev.platform.hmcts.net"
   - name: videoWebUrl
     value: "https://vh-video-web.dev.platform.hmcts.net"
+  - name: bookingsApiUrl
+    value: "https://vh-bookings-api.dev.platform.hmcts.net/"
