--- a/variables/stg.yaml
+++ b/variables/stg.yaml
@@ -5,3 +5,5 @@ variables:
     value: "https://admin.staging.hearings.reform.hmcts.net"
   - name: videoWebUrl
     value: "https://video.staging.hearings.reform.hmcts.net"
+  - name: bookingsApiUrl
+    value: "https://vh-bookings-api.staging.platform.hmcts.net/"
