--- a/pipelines/templates/run-ui-test.yaml
+++ b/pipelines/templates/run-ui-test.yaml
@@ -34,7 +34,7 @@ steps:
       SecretsFilter: "azuread--tenantid"
 
   - task: AzureKeyVault@1
-    displayName: "Azure Key Vault: vh-bookings-api-dev"
+    displayName: "Azure Key Vault: vh-bookings-api-${{ lower(parameters.environment) }}"
     inputs:
       azureSubscription: "${{ parameters.subscriptionName }}"
       KeyVaultName: "vh-bookings-api-${{ lower(parameters.environment) }}"
@@ -77,6 +77,9 @@ steps:
     inputs:
       command: test
       projects: "${{ parameters.projectpath }}/*.csproj"
-      arguments: "--configuration Release --filter TestCategory=${{ parameters.testCategory }}"
       publishTestResults: true
       testRunTitle: "${{ parameters.testRunTitle }}"
+      ${{ if eq(parameters.testCategory, '') }}:
+        arguments: "--configuration Release"
+      ${{ else }}:
+        arguments: "--configuration Release --filter TestCategory=${{ parameters.testCategory }}"
