add a config section to swap out values that are environment specific

--- a/UI.NUnitVersion/appsettings.json
+++ b/UI.NUnitVersion/appsettings.json
@@ -80,5 +80,8 @@
       "Url": "https://localhost:5300/",      
       "ResourceId": "ResourceId"
     }
+  },
+  "TestDataConfiguration": {
+    "AudioLinkCaseNumber": "VIH 9831"
   }
 }
