--- a/variables/dev.yaml
+++ b/variables/dev.yaml
@@ -7,3 +7,5 @@ variables:
     value: "https://vh-video-web.dev.platform.hmcts.net"
   - name: bookingsApiUrl
     value: "https://vh-bookings-api.dev.platform.hmcts.net/"
+  - name: audioLinkCaseNumber
+    value: "VIH 9831"
