--- a/azure-pipelines.sds.daily.yml
+++ b/azure-pipelines.sds.daily.yml
@@ -71,6 +71,8 @@ stages:
                 value: $(Build.ArtifactStagingDirectory)/TestResults/
               - name: ApiClientConfiguration.BookingsApi.Url
                 value: ${{ variables.bookingsApiUrl }}
+              - name: TestDataConfiguration.AudioLinkCaseNumber
+                value: ${{ variables.audioLinkCaseNumber }}
 
             steps:
               - template: pipelines/templates/run-ui-test.yaml
@@ -117,7 +119,7 @@ stages:
               - name: SystemConfiguration.EnvironmentConfigSettings.TestResultsDirectory
                 value: $(Build.ArtifactStagingDirectory)/TestResults/
               - name: ApiClientConfiguration.BookingsApi.Url
-                value: "https://vh-bookings-api.${{ lower(replace(parameters.environment, 'stg', 'staging')) }}.platform.hmcts.net"
+                value: ${{ variables.bookingsApiUrl }}
 
             steps:
               - template: pipelines/templates/run-ui-test.yaml
