include env name

--- a/azure-pipelines.sds.daily.yml
+++ b/azure-pipelines.sds.daily.yml
@@ -29,6 +29,8 @@ parameters:
       - Test
       - Stg
 
+name: ${{ parameters.environment }}_UI_Tests_$(Date:yyyyMMdd)$(Rev:.r)
+
 pool:
   name: "VH Self Hosted"
 
