--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -7,4 +7,4 @@ major-version-bump-message: '\+semver:\s?(breaking|major)'
 minor-version-bump-message: '\+semver:\s?(feature|minor)'
 patch-version-bump-message: '\+semver:\s?(fix|patch)'
 commit-message-incrementing: MergeMessageOnly
-update-build-number: true
+update-build-number: false
