update build number for full regression pipeline

--- a/azure-pipelines.sds.regression.yml
+++ b/azure-pipelines.sds.regression.yml
@@ -11,6 +11,8 @@ parameters:
       - Test
       - Stg
 
+name: ${{ parameters.environment }}_UI_Regression_Tests_$(Date:yyyyMMdd)$(Rev:.r)
+
 pool:
   name: "VH Self Hosted"
 
