--- a/UI.NUnitVersion/UI.NUnitVersion.csproj
+++ b/UI.NUnitVersion/UI.NUnitVersion.csproj
@@ -21,6 +21,7 @@
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="116.0.5845.9600" />
         <PackageReference Include="WebDriverManager" Version="2.16.2" />
     </ItemGroup>
 
