End to End command centre journey test scenario created, page models, functions and supporting app-settings

--- a/UI.NUnitVersion/appsettings.json
+++ b/UI.NUnitVersion/appsettings.json
@@ -79,6 +79,10 @@
     "BookingsApi": {
       "Url": "https://localhost:5300/",      
       "ResourceId": "ResourceId"
+    },
+    "VideosApi": {
+      "Url": "https://localhost:59390/",
+      "ResourceId": "ResourceId"
     }
   },
   "TestDataConfiguration": {
