--- a/variables/stg.yaml
+++ b/variables/stg.yaml
@@ -7,5 +7,7 @@ variables:
     value: "https://video.staging.hearings.reform.hmcts.net"
   - name: bookingsApiUrl
     value: "https://vh-bookings-api.staging.platform.hmcts.net/"
+  - name: videoApiUrl
+    value: "https://vh-video-api.staging.platform.hmcts.net/"
   - name: audioLinkCaseNumber
     value: "Test Test Tuesday"
