--- a/variables/test.yaml
+++ b/variables/test.yaml
@@ -7,3 +7,5 @@ variables:
     value: "https://vh-video-web.test.platform.hmcts.net"
   - name: bookingsApiUrl
     value: "https://vh-bookings-api.test.platform.hmcts.net/"
+  - name: videoApiUrl
+    value: "https://vh-video-api.staging.platform.hmcts.net/"
