Reverted change to appsettings

--- a/UI.NUnitVersion/appsettings.json
+++ b/UI.NUnitVersion/appsettings.json
@@ -41,8 +41,8 @@
       "Environment": "Development",
       "BrowserType": "Chrome",
       "ConnectionString": "",
-      "AdminUrl": "https://localhost:5400",//"https://vh-admin-web.dev.platform.hmcts.net",
-      "VideoUrl": "https://localhost:5800",//"https://vh-video-web.dev.platform.hmcts.net",
+      "AdminUrl": "https://vh-admin-web.dev.platform.hmcts.net",
+      "VideoUrl": "https://vh-video-web.dev.platform.hmcts.net",
       "UserPassword": "",
       "UKConferencePhoneNumber": "",
       "SoapApiUrl": "",
